Slightly faster loading times

--- a/index.html
+++ b/index.html
@@ -6,10 +6,85 @@
   <link rel="icon" type="image/svg+xml" href="/aragubas.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Aragubas</title>
+
+  <style>
+    /* Imports Inter, Ubuntu Mono and Ubuntu fonts */
+    @font-face {
+      font-family: 'Ubuntu';
+      src: url("/fonts/Ubuntu.ttf");
+      font-weight: normal;
+    }
+
+    @font-face {
+      font-family: 'Ubuntu';
+      src: url("/fonts/Ubuntu-Bold.ttf");
+      font-weight: bold;
+    }
+
+    @font-face {
+      font-family: 'Inter';
+      src: url("/fonts/Inter.ttf");
+      font-weight: bold;
+    }
+
+    @font-face {
+      font-family: 'Inter';
+      src: url("/fonts/Inter-Light.ttf");
+      font-weight: lighter;
+    }
+
+    body {
+      margin: 0;
+    }
+
+    #app-loading-spinner {
+      position: absolute;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      top: 0;
+      bottom: 0;
+      width: 100vw;
+      height: 100vh;
+      background-color: rgb(200, 200, 200);
+    }
+
+    @keyframes spin {
+      from {
+        transform: rotate(0deg);
+      }
+
+      to {
+        transform: rotate(360deg);
+      }
+    }
+
+    #app-loading-spinner #spinner {
+      animation: spin 1s linear infinite;
+      width: 15vw;
+      height: 15vw;
+      border-radius: 50%;
+      border: solid 1.5vw gray;
+      border-bottom-color: white;
+      will-change: transform;
+    }
+
+    @media screen and (max-width: 450px) {
+      #app-loading-spinner #spinner {
+        width: 50vw;
+        height: 50vw;
+        border: solid 5vw gray;
+        border-bottom-color: white;
+      }
+    }
+  </style>
 </head>
 
 <body>
   <div id="app"></div>
+  <div id="app-loading-spinner">
+    <div id="spinner" />
+  </div>
   <script type="module" src="/src/main.ts"></script>
 </body>
 
