fixed fonts not loading

--- a/index.html
+++ b/index.html
@@ -5,34 +5,13 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/aragubas.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter&family=Ubuntu:wght@300;400&display=swap" rel="stylesheet">
+
   <title>Aragubas</title>
 
   <style>
-    /* Imports Inter, Ubuntu Mono and Ubuntu fonts */
-    @font-face {
-      font-family: 'Ubuntu';
-      src: url("/fonts/Ubuntu.ttf");
-      font-weight: normal;
-    }
-
-    @font-face {
-      font-family: 'Ubuntu';
-      src: url("/fonts/Ubuntu-Bold.ttf");
-      font-weight: bold;
-    }
-
-    @font-face {
-      font-family: 'Inter';
-      src: url("/fonts/Inter.ttf");
-      font-weight: bold;
-    }
-
-    @font-face {
-      font-family: 'Inter';
-      src: url("/fonts/Inter-Light.ttf");
-      font-weight: lighter;
-    }
-
     body {
       margin: 0;
     }
