--- a/index.html
+++ b/index.html
@@ -21,11 +21,10 @@
 
 <body>
   <header id="header" class="main-header">
-    <a class="button" href="">Contact Now</a>
+    <a class="button" href="#contact">Contact Me</a>
     <div class="right-buttons">
-      <a class="button" href="">Home</a>
-      <a class="button" href="">Projects</a>
-      <a class="button" href="">Certifications</a>
+      <a class="button" href="#projects">Projects</a>
+      <a class="button" href="#certifications">Certifications</a>
     </div>
   </header>
 
@@ -56,7 +55,7 @@
       <header>
         <h1>LiVerse</h1>
       </header>
-      <p>LiVerse is a native PNGTuber streamer app<br>for Windows, macOS and Linux</p>
+      <p>LiVerse is a native PNGTuber streamer app for Windows, macOS and Linux</p>
       <div class="buttons">
         <a class="button" href="https://github.com/aragubas/liverse" target="_blank">Github</a>
       </div>
@@ -66,7 +65,7 @@
       <header>
         <h1>Taiyou</h1>
       </header>
-      <p>TaiyouUI is a declarative native GUI Framework<br>built with C++ using SDL2</p>
+      <p>TaiyouUI is a declarative native GUI Framework built with C++ using SDL2</p>
       <div class="buttons">
         <a class="button" href="https://github.com/aragubas/taiyouui" target="_blank">Github</a>
       </div>
@@ -76,7 +75,7 @@
       <header>
         <h1>ChargerPlugEvent</h1>
       </header>
-      <p>C# Winform app for displaying a notification and <br> plays a sound when plugging/unpligging laptop charger</p>
+      <p>C# Winform app for displaying a notification and plays a sound when plugging/unpligging laptop charger</p>
       <div class="buttons">
         <a class="button" href="https://github.com/aragubas/chargerplugevent" target="_blank">Github</a>
       </div>
@@ -86,7 +85,7 @@
       <header>
         <h1>GDIShoot</h1>
       </header>
-      <p>C++ CLI tool for taking a screenshot of the <br> whole screen</p>
+      <p>C++ CLI tool for taking a screenshot of the whole screen</p>
       <div class="buttons">
         <a class="button" href="https://github.com/aragubas/GDIshot" target="_blank">Github</a>
       </div>
@@ -96,7 +95,7 @@
       <header>
         <h1>🗣️</h1>
       </header>
-      <p>aiajsdkafoefpokwepfdoedpefw<br>press 'A' for a better experience :3</p>
+      <p>aiajsdkafoefpokwepfdoedpefw. press 'A' for a better experience :3</p>
       <div class="buttons">
         <a class="button" href="https://github.com/aragubas/aiajsdkafoefpokwepfdoedpefw" target="_blank">Github</a>
         <a class="button" href="https://aragubas.com/aiajsdkafoefpokwepfdoedpefw/" target="_blank">Website</a>
@@ -110,7 +109,7 @@
       <header>
         <h1>Foundational C# with Microsoft</h1>
       </header>
-      <p>At March 13, 2024. I completed FreeCodeCamp’s Foundational <br> C# with Microsoft course!</p>
+      <p>At March 13, 2024. I completed FreeCodeCamp’s Foundational  C# with Microsoft course!</p>
       <div class="buttons">
         <a class="button" href="https://www.freecodecamp.org/certification/aragubas/foundational-c-sharp-with-microsoft" target="_blank">View Certification</a>
       </div>
@@ -157,10 +156,10 @@
 
   <footer class="footer">
     <div class="buttons">
-      <a class="button" href="" target="_blank">Home</a>
-      <a class="button" href="" target="_blank">Projects</a>
-      <a class="button" href="" target="_blank">Certifications</a>
-      <a class="button" href="" target="_blank">Contact</a>
+      <a class="button" href="#hero">Home</a>
+      <a class="button" href="#projects">Projects</a>
+      <a class="button" href="#certifications">Certifications</a>
+      <a class="button" href="#contact">Contact</a>
     </div>
 
     <article class="extra-contact-links">
