deploy: 615b82403c8e7ac623289013061665f420fd647d

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <section class="title-section">
       <div class="hero-title">
         <h1>Harley Sky Saphri</h1>
-        <p>Junior Software Dev and Designer</p>
+        <p>Junior Software Dev and UI Designer</p>
       </div>
 
       <p class="hero-description">Hi, I'm a 19 year old software developer from Brazil who loves <span
@@ -56,6 +56,72 @@
 
 
   <article id="projects" class="cards-section projects-section">
+    <section class="project-card">
+      <header>
+        <h1>Portfolio</h1>
+      </header>
+      <p>The website you are in right now! using <a href="https://vite.dev">vite</a> for the final static build</p>
+      <div class="buttons">
+        <a class="button" href="https://github.com/aragubas/aragubas.github.io" target="_blank">Github</a>
+      </div>
+    </section>
+
+    <section class="project-card">
+      <header>
+        <h1>Waxer (old 2021)</h1>
+      </header>
+      <p>(Old 2021 version) a Terraria-Like game made with my own Game Engine with it's own optimized chunk rendering
+        and a physics engine with support for rigid bodies and kinematic bodies</p>
+      <div class="buttons">
+        <a class="button" href="https://github.com/aragubas/Waxer" target="_blank">Github</a>
+      </div>
+    </section>
+
+    <section class="project-card">
+      <header>
+        <h1>OneTrack (old 2020)</h1>
+      </header>
+      <p>Chiptune Tracker app made for the Taiyou Framework Platform (old Python version)</p>
+      <div class="buttons">
+        <a class="button" href="https://github.com/aragubas/OneTrack" target="_blank">Github</a>
+      </div>
+    </section>
+
+    <section class="project-card">
+      <header>
+        <h1>Taiyou Framework (old 2020)</h1>
+      </header>
+      <p>Platform for making cross-platform apps with Python + PyGame, with a virtual operating system environment with
+        it's own OS-Like stack
+      <p>
+      <div class="buttons">
+        <a class="button" href="https://github.com/aragubas/taiyou-framework" target="_blank">Github</a>
+      </div>
+    </section>
+
+    <section class="project-card">
+      <header>
+        <h1>Taiyou Config (old 2022)</h1>
+      </header>
+      <p>A binary and pre-compiled configuration file format made with C++
+      <p>
+      <div class="buttons">
+        <a class="button" href="https://github.com/aragubas/TaiyouConfig" target="_blank">Github</a>
+      </div>
+    </section>
+
+    <section class="project-card">
+      <header>
+        <h1>World is Corrupted (old 2021)</h1>
+      </header>
+      <p>A platformer game made with my own game engine with it's optimized tilemap renderer, custom scripting language
+        (Taiyou Script) and physics engine
+      <p>
+      <div class="buttons">
+        <a class="button" href="https://github.com/aragubas/WorldIsCorrupted_DotNetCore" target="_blank">Github</a>
+      </div>
+    </section>
+
     <section class="project-card">
       <header>
         <h1>LiVerse</h1>
