deploy: a57b780dbbb485caa4e09e6621091fdfb1acb3f5

--- a/index.html
+++ b/index.html
@@ -124,6 +124,53 @@
 
     <section class="project-card">
       <header>
+        <h1>New Fogoso (old 2021)</h1>
+      </header>
+      <p>A clicker game made with my own game engine, with some parts written in my custom scripting language (Taiyou
+        Scripts)
+      <p>
+      <div class="buttons">
+        <a class="button" href="https://github.com/aragubas/NewFogoso" target="_blank">Github</a>
+      </div>
+    </section>
+
+
+    <section class="project-card">
+      <header>
+        <h1>TNotepad (old 2021)</h1>
+      </header>
+      <p>A basic text editor with tabs and a home page with documents that can be pinned. Made with my own WinForms GDI+
+        libraries and utility library
+      <p>
+      <div class="buttons">
+        <a class="button" href="https://github.com/aragubas/TNotepad" target="_blank">Github</a>
+      </div>
+    </section>
+
+    <section class="project-card">
+      <header>
+        <h1>TaiyouUI Library (old 2021)</h1>
+      </header>
+      <p>A UI Library for WinForms apps with custom controls and utility functions
+      <p>
+      <div class="buttons">
+        <a class="button" href="https://github.com/aragubas/TaiyouUILibrary/" target="_blank">Github</a>
+      </div>
+    </section>
+
+    <section class="project-card">
+      <header>
+        <h1>TaiyouUtils Library (old 2021)</h1>
+      </header>
+      <p>Utility library for C# apps</p>
+      <div class="buttons">
+        <a class="button" href="https://github.com/aragubas/TaiyouUtils" target="_blank">Github</a>
+      </div>
+    </section>
+
+
+    <section class="project-card">
+      <header>
         <h1>LiVerse</h1>
       </header>
       <p>LiVerse is a native PNGTuber streamer app for Windows, macOS and Linux</p>
