Fix typos and add new library I made

--- a/index.html
+++ b/index.html
@@ -67,6 +67,17 @@
 
     <section class="project-card">
       <header>
+        <h1>TaiyouSimpleLog<h1>
+      </header>
+      <p>A simple and elegant logging library for Godot 4.5+ games, customizable and easy to use. Written in C#</p>
+      <div class="buttons">
+        <a class="button" href="https://github.com/aragubas/taiyou-simple-log/" target="_blank">Github</a>
+        <a class="button" href="https://www.nuget.org/packages/aragubas.taiyou.simplelog/" target="_blank">nuget.org</a>
+      </div>
+    </section>
+
+    <section class="project-card">
+      <header>
         <h1>Waxer (old 2021)</h1>
       </header>
       <p>(Old 2021 version) a Terraria-Like game made with my own Game Engine with it's own optimized chunk rendering
@@ -180,7 +191,7 @@
 
     <section class="project-card">
       <header>
-        <h1>Taiyou</h1>
+        <h1>TaiyouUI</h1>
       </header>
       <p>TaiyouUI is a declarative native GUI Framework built with C++ using SDL2</p>
       <div class="buttons">
