deploy: 95d199f293a767e56c8deeb7a87f07c261a5ca66

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <title>Harley Sky Saphri</title>
   <meta charset="UTF-8" />
   <meta name="description" content="Harley Sky Saphri's Portfolio">
-  <meta name="keyword" content="Aragubas, Harley Sky Saphri, Paulo Otávio de Lima">
-  <meta name="author" content="Aragubas, Harley Sky Saphri">
+  <meta name="keyword" content="Aragubas, Harley Sky Saphri, Harley Sky Lima">
+  <meta name="author" content="Aragubas">
   <link rel="icon" type="image/svg+xml" href="./aragubas.svg" />
   
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -40,7 +40,7 @@
 
     <section class="title-section">
       <div class="hero-title">
-        <h1>Harley Sky Saphri</h1>
+        <h1>Harley Sky Lima</h1>
         <p>Junior Software Dev and UI Designer</p>
       </div>
 
@@ -79,12 +79,11 @@
 
     <section class="project-card">
       <header>
-        <h1>Waxer (old 2021)</h1>
+        <h1>LiVerse</h1>
       </header>
-      <p>(Old 2021 version) a Terraria-Like game made with my own Game Engine with it's own optimized chunk rendering
-        and a physics engine with support for rigid bodies and kinematic bodies</p>
+      <p>LiVerse is a native PNGTuber streamer app for Windows, macOS and Linux</p>
       <div class="buttons">
-        <a class="button" href="https://github.com/aragubas/Waxer" target="_blank">Github</a>
+        <a class="button" href="https://github.com/aragubas/liverse" target="_blank">Github</a>
       </div>
     </section>
 
@@ -109,117 +108,6 @@
         <a class="button" href="https://github.com/aragubas/taiyou-framework" target="_blank">Github</a>
       </div>
     </section>
-
-    <section class="project-card">
-      <header>
-        <h1>Taiyou Config (old 2022)</h1>
-      </header>
-      <p>A binary and pre-compiled configuration file format made with C++
-      <p>
-      <div class="buttons">
-        <a class="button" href="https://github.com/aragubas/TaiyouConfig" target="_blank">Github</a>
-      </div>
-    </section>
-
-    <section class="project-card">
-      <header>
-        <h1>World is Corrupted (old 2021)</h1>
-      </header>
-      <p>A platformer game made with my own game engine with it's optimized tilemap renderer, custom scripting language
-        (Taiyou Script) and physics engine
-      <p>
-      <div class="buttons">
-        <a class="button" href="https://github.com/aragubas/WorldIsCorrupted_DotNetCore" target="_blank">Github</a>
-      </div>
-    </section>
-
-    <section class="project-card">
-      <header>
-        <h1>New Fogoso (old 2021)</h1>
-      </header>
-      <p>A clicker game made with my own game engine, with some parts written in my custom scripting language (Taiyou
-        Scripts)
-      <p>
-      <div class="buttons">
-        <a class="button" href="https://github.com/aragubas/NewFogoso" target="_blank">Github</a>
-      </div>
-    </section>
-
-
-    <section class="project-card">
-      <header>
-        <h1>TNotepad (old 2021)</h1>
-      </header>
-      <p>A basic text editor with tabs and a home page with documents that can be pinned. Made with my own WinForms GDI+
-        libraries and utility library
-      <p>
-      <div class="buttons">
-        <a class="button" href="https://github.com/aragubas/TNotepad" target="_blank">Github</a>
-      </div>
-    </section>
-
-    <section class="project-card">
-      <header>
-        <h1>TaiyouUI Library (old 2021)</h1>
-      </header>
-      <p>A UI Library for WinForms apps with custom controls and utility functions
-      <p>
-      <div class="buttons">
-        <a class="button" href="https://github.com/aragubas/TaiyouUILibrary/" target="_blank">Github</a>
-      </div>
-    </section>
-
-    <section class="project-card">
-      <header>
-        <h1>TaiyouUtils Library (old 2021)</h1>
-      </header>
-      <p>Utility library for C# apps</p>
-      <div class="buttons">
-        <a class="button" href="https://github.com/aragubas/TaiyouUtils" target="_blank">Github</a>
-      </div>
-    </section>
-
-
-    <section class="project-card">
-      <header>
-        <h1>LiVerse</h1>
-      </header>
-      <p>LiVerse is a native PNGTuber streamer app for Windows, macOS and Linux</p>
-      <div class="buttons">
-        <a class="button" href="https://github.com/aragubas/liverse" target="_blank">Github</a>
-      </div>
-    </section>
-
-    <section class="project-card">
-      <header>
-        <h1>TaiyouUI</h1>
-      </header>
-      <p>TaiyouUI is a declarative native GUI Framework built with C++ using SDL2</p>
-      <div class="buttons">
-        <a class="button" href="https://github.com/aragubas/taiyouui" target="_blank">Github</a>
-      </div>
-    </section>
-
-    <section class="project-card">
-      <header>
-        <h1>ChargerPlugEvent</h1>
-      </header>
-      <p>C# Winform app for displaying a notification and plays a sound when plugging/unpligging laptop charger</p>
-      <div class="buttons">
-        <a class="button" href="https://github.com/aragubas/chargerplugevent" target="_blank">Github</a>
-      </div>
-    </section>
-
-    <section class="project-card">
-      <header>
-        <h1>GDIShoot</h1>
-      </header>
-      <p>C++ CLI tool for taking a screenshot of the whole screen</p>
-      <div class="buttons">
-        <a class="button" href="https://github.com/aragubas/GDIshot" target="_blank">Github</a>
-      </div>
-    </section>
-
     <section class="project-card">
       <header>
         <h1>🗣️</h1>
