--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
       <span class="icon fa-brands fa-telegram"></span>
     </a>
 
-    <a target="_blank" href="mailto:dpaulootavio5@outlook.com" class="contact-card">
+    <a target="_blank" href="mailto:aragubas@outlook.com" class="contact-card">
       <header>
         <h1>Email</h1>
       </header>
@@ -186,7 +186,7 @@
         </header>
 
         <div class="links-list">
-          <a class="clicklink" href="mailto:dpaulootavio5@outlook.com" target="_blank"><span
+          <a class="clicklink" href="mailto:aragubas@outlook.com" target="_blank"><span
               class="fa-solid fa-envelope"></span>Email</a>
           <a class="clicklink" href="https://t.me/aragubas" target="_blank"><span
               class="fa-brands fa-telegram"></span>Telegram</a>
