deploy: bd02da80c3f4446be011c574343848b0c6848145

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
       <span class="icon fa-brands fa-telegram"></span>
     </a>
 
-    <a target="_blank" href="mailto:dpaulootavio5@outlook.com" class="contact-card">
+    <a target="_blank" href="mailto:aragubas@outlook.com" class="contact-card">
       <header>
         <h1>Email</h1>
       </header>
@@ -187,7 +187,7 @@
         </header>
 
         <div class="links-list">
-          <a class="clicklink" href="mailto:dpaulootavio5@outlook.com" target="_blank"><span
+          <a class="clicklink" href="mailto:aragubas@outlook.com" target="_blank"><span
               class="fa-solid fa-envelope"></span>Email</a>
           <a class="clicklink" href="https://t.me/aragubas" target="_blank"><span
               class="fa-brands fa-telegram"></span>Telegram</a>
