--- a/index.html
+++ b/index.html
@@ -1,228 +1,29 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+  <head>
+    <title>Harley Sky Saphri</title>
+    <meta charset="UTF-8" />
+    <meta name="description" content="Harley Sky Saphri's Portfolio" />
+    <meta name="keyword" content="Aragubas, Harley Sky Saphri, Harley Sky Lima" />
+    <meta name="author" content="Aragubas" />
+    <link rel="icon" type="image/svg+xml" href="/aragubas.svg" />
+    <link rel="stylesheet" type="text/css" href="src/style.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital@0;1&family=Ubuntu:wght@400;500&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" type="text/css" href="/fontawesome.min.css" />
+    <link rel="stylesheet" type="text/css" href="/brands.min.css" />
+    <link rel="stylesheet" type="text/css" href="/solid.min.css" />
+  </head>
 
-<head>
-  <title>Harley Sky Saphri</title>
-  <meta charset="UTF-8" />
-  <meta name="description" content="Harley Sky Saphri's Portfolio">
-  <meta name="keyword" content="Aragubas, Harley Sky Saphri, Harley Sky Lima">
-  <meta name="author" content="Aragubas">
-  <link rel="icon" type="image/svg+xml" href="/aragubas.svg" />
-  <link rel="stylesheet" type="text/css" href="src/style.css" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Ubuntu:wght@400;700&display=swap"
-    rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="/fontawesome.min.css" />
-  <link rel="stylesheet" type="text/css" href="/brands.min.css" />
-  <link rel="stylesheet" type="text/css" href="/solid.min.css" />
-</head>
-
-<body>
-  <header id="header" class="main-header">
-    <a class="button" href="#contact">Contact Me</a>
-    <div class="right-buttons">
-      <a class="button" href="#projects">Projects</a>
-      <a class="button" href="#certifications">Certifications</a>
-    </div>
-  </header>
-
-
-  <article id="hero" class="hero-section">
-    <section class="fursona-section">
-      <img src="fursona.jpg" class="hero-image">
-      <p>by <a href="https://daieny.com" target="_blank">Daieny Schuttz</a></p>
-    </section>
-
-    <section class="title-section">
-      <div class="hero-title">
-        <h1>Harley Sky Lima</h1>
-        <p>Junior Software Dev and UI Designer</p>
-      </div>
-
-      <p class="hero-description">Hi, I'm a 19 year old software developer from Brazil who loves <span
-          class="text-highlight">Open Source</span>.<br> I'm the owner of <a target="_blank"
-          href="https://aragubas.com">Aragubas</a></p>
-
-      <div class="hero-buttons">
-        <a class="button" href="https://aragubas.com" target="_blank">Check out aragubas.com</a>
-      </div>
-    </section>
-  </article>
-
-
-  <article id="projects" class="cards-section projects-section">
-    <section class="project-card">
-      <header>
-        <h1>Portfolio</h1>
-      </header>
-      <p>The website you are in right now! using <a href="https://vite.dev">vite</a> for the final static build</p>
-      <div class="buttons">
-        <a class="button" href="https://github.com/aragubas/aragubas.github.io" target="_blank">Github</a>
-      </div>
-    </section>
-
-    <section class="project-card">
-      <header>
-        <h1>TaiyouSimpleLog<h1>
-      </header>
-      <p>A simple and elegant logging library for Godot 4.5+ games, customizable and easy to use. Written in C#</p>
-      <div class="buttons">
-        <a class="button" href="https://github.com/aragubas/taiyou-simple-log/" target="_blank">Github</a>
-        <a class="button" href="https://www.nuget.org/packages/aragubas.taiyou.simplelog/" target="_blank">nuget.org</a>
-      </div>
-    </section>
-
-    <section class="project-card">
-      <header>
-        <h1>LiVerse</h1>
-      </header>
-      <p>LiVerse is a native PNGTuber streamer app for Windows, macOS and Linux</p>
-      <div class="buttons">
-        <a class="button" href="https://github.com/aragubas/liverse" target="_blank">Github</a>
-      </div>
-    </section>
-
-    <section class="project-card">
-      <header>
-        <h1>OneTrack (old 2020)</h1>
-      </header>
-      <p>Chiptune Tracker app made for the Taiyou Framework Platform (old Python version)</p>
-      <div class="buttons">
-        <a class="button" href="https://github.com/aragubas/OneTrack" target="_blank">Github</a>
-      </div>
-    </section>
-
-    <section class="project-card">
-      <header>
-        <h1>Taiyou Framework (old 2020)</h1>
-      </header>
-      <p>Platform for making cross-platform apps with Python + PyGame, with a virtual operating system environment with
-        it's own OS-Like stack
-      <p>
-      <div class="buttons">
-        <a class="button" href="https://github.com/aragubas/taiyou-framework" target="_blank">Github</a>
-      </div>
-    </section>
-    <section class="project-card">
-      <header>
-        <h1>🗣️</h1>
-      </header>
-      <p>aiajsdkafoefpokwepfdoedpefw. press 'A' for a better experience :3</p>
-      <div class="buttons">
-        <a class="button" href="https://github.com/aragubas/aiajsdkafoefpokwepfdoedpefw" target="_blank">Github</a>
-        <a class="button" href="https://aragubas.com/aiajsdkafoefpokwepfdoedpefw/" target="_blank">Website</a>
-      </div>
-    </section>
-  </article>
-
-
-  <article id="certifications" class="cards-section certifications-section">
-    <section class="project-card">
-      <header>
-        <h1>Foundational C# with Microsoft</h1>
-      </header>
-      <p>At March 13, 2024. I completed FreeCodeCamp’s Foundational C# with Microsoft course!</p>
-      <div class="buttons">
-        <a class="button" href="https://www.freecodecamp.org/certification/aragubas/foundational-c-sharp-with-microsoft"
-          target="_blank">View Certification</a>
-      </div>
-    </section>
-  </article>
-
-
-  <article id="contact" class="contact-section">
-    <a target="_blank" href="https://www.linkedin.com/in/harley-sky-saphri-357344264/" class="contact-card">
-      <header>
-        <h1>LinkedIn</h1>
-      </header>
-      <span class="icon fa-brands fa-linkedin"></span>
-    </a>
-
-    <a target="_blank" href="https://github.com/aragubas" class="contact-card">
-      <header>
-        <h1>Github</h1>
-      </header>
-      <span class="icon fa-brands fa-github"></span>
-    </a>
-
-    <a target="_blank" href="https://bsky.app/profile/aragubas.com" class="contact-card">
-      <header>
-        <h1>Bluesky</h1>
-      </header>
-      <span class="icon fa-brands fa-bluesky"></span>
-    </a>
-
-    <a target="_blank" href="https://t.me/harleysky" class="contact-card">
-      <header>
-        <h1>Telegram</h1>
-      </header>
-      <span class="icon fa-brands fa-telegram"></span>
-    </a>
-
-    <a target="_blank" href="mailto:aragubas@outlook.com" class="contact-card">
-      <header>
-        <h1>Email</h1>
-      </header>
-      <span class="icon fa-solid fa-envelope"></span>
-    </a>
-  </article>
-
-  <footer class="footer">
-    <div class="buttons">
-      <a class="button" href="#hero">Home</a>
-      <a class="button" href="#projects">Projects</a>
-      <a class="button" href="#certifications">Certifications</a>
-      <a class="button" href="#contact">Contact</a>
-    </div>
-
-    <article class="extra-contact-links">
-      <article class="extra-links">
-        <header>
-          <h1>Contact Me</h1>
-        </header>
-
-        <div class="links-list">
-          <a class="clicklink" href="mailto:aragubas@outlook.com" target="_blank"><span
-              class="fa-solid fa-envelope"></span>Email</a>
-          <a class="clicklink" href="https://t.me/aragubas" target="_blank"><span
-              class="fa-brands fa-telegram"></span>Telegram</a>
-          <a class="clicklink" href="https://www.linkedin.com/in/harley-sky-saphri-357344264/" target="_blank"><span
-              class="fa-brands fa-linkedin"></span>LinkedIn</a>
-          <p class="clicklink"><span class="fa-brands fa-discord"></span>@aragubas</a>
-        </div>
-      </article>
-
-      <article class="extra-links">
-        <header>
-          <h1>Social</h1>
-        </header>
-
-        <div class="links-list">
-          <a class="clicklink" href="https://youtube.com/c/aragubas" target="_blank"><span
-              class="fa-brands fa-youtube"></span>YouTube</a>
-          <a class="clicklink" href="https://www.furaffinity.net/user/aragubas" target="_blank"><span
-              class="fa-solid fa-paw"></span>Furaffinity</a>
-          <a class="clicklink" href="https://furry.engineer/@aragubas" target="_blank"><span
-              class="fa-brands fa-mastodon"></span>Mastodon</a>
-          <a class="clicklink" href="https://x.com/aragubas_" target="_blank"><span
-              class="fa-brands fa-twitter"></span>Twitter/X</a>
-          <a class="clicklink" href="https://www.instagram.com/aragubas/" target="_blank"><span
-              class="fa-brands fa-instagram"></span>Instagram</a>
-          <a class="clicklink" href="https://bsky.app/profile/aragubas.com" target="_blank"><span
-              class="fa-brands fa-bluesky"></span>Bluesky</a>
-        </div>
-      </article>
+  <body>
+    <span class="arrow-pattern" />
+    <article class="main-page">
+      <section></section>
     </article>
-
-    <article class="copyright">
-      <p><span class="fa-solid fa-copyright"></span> 2025 Harley Sky Saphri</p>
-      <i>the essential is invisible to the eye</i>
-    </article>
-  </footer>
-</body>
-
+  </body>
 </html>
