--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <link rel="stylesheet" type="text/css" href="./fontawesome.min.css" />
   <link rel="stylesheet" type="text/css" href="./brands.min.css" />
   <link rel="stylesheet" type="text/css" href="./solid.min.css" />
-  <link rel="stylesheet" href="./assets/index.6727c3e3.css">
+  <link rel="stylesheet" href="./assets/index.81cd2eed.css">
 </head>
 
 <body>
@@ -44,7 +44,7 @@
         <p>Junior Software Dev and UI Designer</p>
       </div>
 
-      <p class="hero-description">Hi, I'm a 19 year old software developer from Brazil who loves <span
+      <p class="hero-description">Hi, I'm a 20 year old software developer from Brazil who loves <span
           class="text-highlight">Open Source</span>.<br> I'm the owner of <a target="_blank"
           href="https://aragubas.com">Aragubas</a></p>
 
@@ -74,6 +74,16 @@
       <div class="buttons">
         <a class="button" href="https://github.com/aragubas/taiyou-simple-log/" target="_blank">Github</a>
         <a class="button" href="https://www.nuget.org/packages/aragubas.taiyou.simplelog/" target="_blank">nuget.org</a>
+      </div>
+    </section>
+
+    <section class="project-card">
+      <header>
+        <h1>SunshineTaiyou (rust-rewrite)<h1>
+      </header>
+      <p>A programming language and virtual computer written in Rust as a toy project to learn rust</p>
+      <div class="buttons">
+        <a class="button" href="https://gitlab.com/Aragubas/sunshinetaiyou/-/tree/rust-rewrite" target="_blank">Gitlab</a>
       </div>
     </section>
 
@@ -220,8 +230,8 @@
     </article>
 
     <article class="copyright">
-      <p><span class="fa-solid fa-copyright"></span> 2025 Harley Sky Saphri</p>
-      <i>the essential is invisible to the eye</i>
+      <p><span class="fa-solid fa-copyright"></span> 2026 Harley Sky Saphri</p>
+      <i>the essential is transparent to the eye</i>
     </article>
   </footer>
 </body>
