deploy: 6efc72c1551f5de41b53d22290a49c15ab8b43e2

--- a/index.html
+++ b/index.html
@@ -83,7 +83,8 @@
       </header>
       <p>A programming language and virtual computer written in Rust as a toy project to learn rust</p>
       <div class="buttons">
-        <a class="button" href="https://gitlab.com/Aragubas/sunshinetaiyou/-/tree/rust-rewrite" target="_blank">Gitlab</a>
+        <a class="button" href="https://gitlab.com/Aragubas/sunshinetaiyou/-/tree/rust-rewrite"
+          target="_blank">Gitlab</a>
       </div>
     </section>
 
@@ -153,6 +154,13 @@
       <span class="icon fa-brands fa-linkedin"></span>
     </a>
 
+    <a target="_blank" href="https://gitlab.com/aragubas" class="contact-card">
+      <header>
+        <h1>Gitlab</h1>
+      </header>
+      <span class="icon fa-brands fa-gitlab"></span>
+    </a>
+
     <a target="_blank" href="https://github.com/aragubas" class="contact-card">
       <header>
         <h1>Github</h1>
@@ -165,13 +173,6 @@
         <h1>Bluesky</h1>
       </header>
       <span class="icon fa-brands fa-bluesky"></span>
-    </a>
-
-    <a target="_blank" href="https://t.me/harleysky" class="contact-card">
-      <header>
-        <h1>Telegram</h1>
-      </header>
-      <span class="icon fa-brands fa-telegram"></span>
     </a>
 
     <a target="_blank" href="mailto:aragubas@outlook.com" class="contact-card">
@@ -197,12 +198,10 @@
         </header>
 
         <div class="links-list">
-          <a class="clicklink" href="mailto:aragubas@outlook.com" target="_blank"><span
-              class="fa-solid fa-envelope"></span>Email</a>
-          <a class="clicklink" href="https://t.me/aragubas" target="_blank"><span
-              class="fa-brands fa-telegram"></span>Telegram</a>
-          <a class="clicklink" href="https://www.linkedin.com/in/harley-sky-saphri-357344264/" target="_blank"><span
-              class="fa-brands fa-linkedin"></span>LinkedIn</a>
+          <a class="clicklink" href="mailto:aragubas@outlook.com" target="_blank">
+            <span class="fa-solid fa-envelope"></span>Email</a>
+          <a class="clicklink" href="https://www.linkedin.com/in/harley-sky-saphri-357344264/" target="_blank">
+            <span class="fa-brands fa-linkedin"></span>LinkedIn</a>
           <p class="clicklink"><span class="fa-brands fa-discord"></span>@aragubas</a>
         </div>
       </article>
