--- a/index.html
+++ b/index.html
@@ -167,11 +167,11 @@
       <span class="icon fa-brands fa-github"></span>
     </a>
 
-    <a target="_blank" href="https://bsky.app/profile/aragubas.com" class="contact-card">
+    <a target="_blank" href="https://codeberg.org/Aragubas" class="contact-card">
       <header>
-        <h1>Bluesky</h1>
+        <h1>Codeberg</h1>
       </header>
-      <span class="icon fa-brands fa-bluesky"></span>
+      <span class="icon fa-solid fa-mountain"></span>
     </a>
 
     <a target="_blank" href="mailto:aragubas@outlook.com" class="contact-card">
@@ -187,7 +187,6 @@
       <a class="button" href="#hero">Home</a>
       <a class="button" href="#projects">Projects</a>
       <a class="button" href="#certifications">Certifications</a>
-      <a class="button" href="#contact">Contact</a>
     </div>
 
     <article class="extra-contact-links">
@@ -199,9 +198,12 @@
         <div class="links-list">
           <a class="clicklink" href="mailto:aragubas@outlook.com" target="_blank">
             <span class="fa-solid fa-envelope"></span>Email</a>
-          <a class="clicklink" href="https://www.linkedin.com/in/harley-sky-saphri-357344264/" target="_blank">
+          <a class="clicklink" href="https://www.linkedin.com/in/harleyskysaphri/" target="_blank">
             <span class="fa-brands fa-linkedin"></span>LinkedIn</a>
-          <p class="clicklink"><span class="fa-brands fa-discord"></span>@aragubas</a>
+          <p class="clicklink"><span class="fa-brands fa-discord">
+            </span>@aragubas</a>
+          <p class="clicklink"><span class="fa-solid fa-comment-dots">
+            </span>@aragubas_:matrix.org</a>
         </div>
       </article>
 
@@ -213,14 +215,8 @@
         <div class="links-list">
           <a class="clicklink" href="https://youtube.com/c/aragubas" target="_blank"><span
               class="fa-brands fa-youtube"></span>YouTube</a>
-          <a class="clicklink" href="https://www.furaffinity.net/user/aragubas" target="_blank"><span
-              class="fa-solid fa-paw"></span>Furaffinity</a>
-          <a class="clicklink" href="https://furry.engineer/@aragubas" target="_blank"><span
-              class="fa-brands fa-mastodon"></span>Mastodon</a>
           <a class="clicklink" href="https://x.com/aragubas_" target="_blank"><span
               class="fa-brands fa-twitter"></span>Twitter/X</a>
-          <a class="clicklink" href="https://www.instagram.com/aragubas/" target="_blank"><span
-              class="fa-brands fa-instagram"></span>Instagram</a>
           <a class="clicklink" href="https://bsky.app/profile/aragubas.com" target="_blank"><span
               class="fa-brands fa-bluesky"></span>Bluesky</a>
         </div>
