Update dead link

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 
 
   <article id="contact" class="contact-section">
-    <a target="_blank" href="https://www.linkedin.com/in/harley-sky-saphri-357344264/" class="contact-card">
+    <a target="_blank" href="https://www.linkedin.com/in/harleyskysaphri/" class="contact-card">
       <header>
         <h1>LinkedIn</h1>
       </header>
